# finanzauto-technical-test

./: .gitignore  README.md  docker-compose.yml  example.env  gunicorn_conf.py  pyproject.toml
app/: config.py  main.py  test_main.py
app/helpers/: products.py
app/routers/auth/: auth.py
app/routers/products/: models.py  products.py
app/utilities/: cache.py  db.py
cache/: dump.rdb
docs/: Finanzauto Technical Test.postman_collection.json
